--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# Project dependencies
-.cache
-node_modules
-yarn-error.log
-package-lock.json
-yarn.lock
-
-# Build directory
-/public
-.DS_Store
+node_modules/
+.cache/
+public
