--- a/package.json
+++ b/package.json
@@ -1,51 +1,25 @@
 {
-  "name": "mason-built-construction",
-  "version": "0.0.2",
-  "description": "Isaiah Mason Website",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-spectral.git"
-  },
-  "author": {
-    "name": "BigIrishLion"
-  },
-  "dependencies": {
-    "gatsby": "^4.2.0",
-    "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-offline": "^5.2.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sass": "^5.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-images": "^1.1.0",
-    "react-scrollspy": "^3.4.2",
-    "sass": "^1.47.0",
-    "smoothscroll-polyfill": "^0.4.4"
-  },
+  "name": "isaiah-mason-real-estate-broker",
+  "version": "1.0.0",
+  "private": true,
+  "description": "isaiah-mason-real-estate-broker",
+  "author": "bigirishlion",
+  "keywords": [
+    "gatsby"
+  ],
   "scripts": {
     "develop": "gatsby develop",
-    "build": "npm run clean && gatsby build",
-    "deploy": "npm run clean && gatsby build --prefix-paths && gh-pages -d public",
+    "start": "gatsby develop",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "rimraf .cache public",
-    "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "gatsby clean"
   },
-  "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "prettier": "^2.4.1",
-    "rimraf": "^3.0.2"
-  },
-  "keywords": [
-    "gatsby",
-    "gatsby-starter",
-    "gatsby-starter-spectral"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/anubhavsrivastava/gatsby-starter-spectral/issues"
-  },
-  "homepage": "https://github.com/anubhavsrivastava/gatsby-starter-spectral#readme"
+  "dependencies": {
+    "gatsby": "^5.13.7",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.79.4"
+  }
 }
